network/vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Plantilla que crea una VPC para el despliegue de una infraestructura altamente disponible en dos AZs. Cada AZ tendra una subred publica y dos subredes privadas. Ademas, crea una instancia bastion en la subred publica en la AZ1 con un cliente MySQL
Metadata:

  AWS::CloudFormation::Interface:

    ParameterGroups:
      -
        Label:
          default: "Configuracion de la VPC"
        Parameters:
          - VPC
          - SubredPublica1
          - SubredApp1
          - SubredBD1
          - SubredPublica2
          - SubredApp2
          - SubredBD2
          - NATGateways
          - AWSAcademy
      -
        Label:
          default: "Configuracion del bastion"
        Parameters:
          - Bastion

    ParameterLabels:
      VPC:
        default: "VPC"
      SubredPublica1:
        default: "Subred Publica 1"
      SubredApp1:
        default: "Subred App 1"
      SubredBD1:
        default: "Subred BD 1"
      SubredPublica2:
        default: "Subred Publica 2"
      SubredApp2:
        default: "Subred App 2"
      SubredBD2:
        default: "Subred BD 2"
      NATGateways:
        default: "Crear NAT Gateways?"
      Bastion:
        default: "Crear Bastion"
      AWSAcademy:
        default: "Sandbox de AWS Academy"

Mappings:
  AMI:
    us-east-1:
      "HVM64": "ami-081dc0707789c2daf"
    us-west-2:
      "HVM64": "ami-0efabcf945ffd8831"

Parameters:
  VPC:
    Type: String
    Description: Bloque CIDR asignado a la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.0.0/16

  SubredPublica1:
    Type: String
    Description: Bloque CIDR asignado a la subred publica de la AZ1. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.0.0/24

  SubredApp1:
    Type: String
    Description: Bloque CIDR asignado a la subred privada de la AZ1 donde se creara la capa de aplicacion. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.1.0/24

  SubredBD1:
    Type: String
    Description: Bloque CIDR asignado a la subred privada de la AZ1 donde se creara la capa de BBDD. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.2.0/24

  SubredPublica2:
    Type: String
    Description: Bloque CIDR asignado a la subred publica de la AZ2. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.3.0/24

  SubredApp2:
    Type: String
    Description: Bloque CIDR asignado a la subred privada de la AZ2 donde se creara la capa de aplicacion. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.4.0/24

  SubredBD2:
    Type: String
    Description: Bloque CIDR asignado a la subred privada de la AZ1 donde se creara la capa de BBDD. El bloque CIDR debe ser un subconjunto del bloque CIDR de la VPC
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.2.5.0/24

  NATGateways:
    Type: String
    Description: Indica si deben crearse o no los dos Gateway NAT en la VPC
    AllowedValues:
      - "SI"
      - "NO"
    Default: "SI"

  Bastion:
    Type: String
    Description: Indica si debe crears una instancia EC2 bastion
    AllowedValues:
      - "SI"
      - "NO"
    Default: "SI"

  AWSAcademy:
    Type: String
    Description: Indica si es un entorno de AWS Academy o una cuenta real de AWS
    AllowedValues:
      - "SI"
      - "NO"
    Default: "SI"

Conditions:
  CrearNATGateways: !Equals
    - !Ref NATGateways
    - "SI"
  CrearBastion: !Equals
    - !Ref Bastion
    - "SI"
  CrearRol: !Equals
    - !Ref AWSAcademy
    - "NO"

Resources:
  miVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPC
      EnableDnsHostnames: True
      EnableDnsSupport: True
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-VPC"

  miIGW:
    Type: AWS::EC2::InternetGateway

  miAsociacionIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref miIGW
      VpcId: !Ref miVPC

  publica1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredPublica1
      MapPublicIpOnLaunch: True
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-Publica1"

  privadaApp1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredApp1
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-App1"

  privadaBD1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredBD1
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-BD1"

  publica2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredPublica2
      MapPublicIpOnLaunch: True
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-Publica2"

  privadaApp2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredApp2
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-App2"

  privadaBD2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref miVPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Ref SubredBD2
      Tags:
        - Key: "Name"
          Value: "ElasticBeanstalk-BD2"

  eip1:
    Type: AWS::EC2::EIP
    Condition: CrearNATGateways
    Properties:
      Domain: vpc

  eip2:
    Type: AWS::EC2::EIP
    Condition: CrearNATGateways
    Properties:
      Domain: vpc

  NAT1:
    Type: AWS::EC2::NatGateway
    Condition: CrearNATGateways
    Properties:
      AllocationId: !GetAtt eip1.AllocationId
      SubnetId: !Ref publica1
      Tags: 
        - Key: "Name"
          Value: "NAT-1"

  NAT2:
    Type: AWS::EC2::NatGateway
    Condition: CrearNATGateways
    Properties:
      AllocationId: !GetAtt eip2.AllocationId
      SubnetId: !Ref publica2
      Tags: 
        - Key: "Name"
          Value: "NAT-2"

  rutasPublicas:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref miVPC
      Tags: 
        - Key: "Name"
          Value: "Tabla-Rutas-Publica"

  rutaIGW:
    Type: AWS::EC2::Route
    DependsOn: miIGW
    Properties:
      RouteTableId: !Ref rutasPublicas
      GatewayId: !Ref miIGW
      DestinationCidrBlock: '0.0.0.0/0'

  rutasPrivadas1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref miVPC
      Tags: 
        - Key: "Name"
          Value: "Tabla-Rutas-Privada-AZ1"

  rutasPrivadas2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref miVPC
      Tags: 
        - Key: "Name"
          Value: "Tabla-Rutas-Privada-AZ2"

  rutaNAT1:
    Type: AWS::EC2::Route
    Condition: CrearNATGateways
    DependsOn: NAT1
    Properties:
      RouteTableId: !Ref rutasPrivadas1
      NatGatewayId: !Ref NAT1
      DestinationCidrBlock: '0.0.0.0/0'

  rutaNAT2:
    Type: AWS::EC2::Route
    Condition: CrearNATGateways
    DependsOn: NAT2
    Properties:
      RouteTableId: !Ref rutasPrivadas2
      NatGatewayId: !Ref NAT2
      DestinationCidrBlock: '0.0.0.0/0'

  asociacionSubredPub1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPublicas
      SubnetId: !Ref publica1

  asociacionSubredPub2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPublicas
      SubnetId: !Ref publica2

  asociacionSubredApp1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPrivadas1
      SubnetId: !Ref privadaApp1

  asociacionSubredApp2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPrivadas2
      SubnetId: !Ref privadaApp2

  asociacionSubredBD1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPrivadas1
      SubnetId: !Ref privadaBD1

  asociacionSubredBD2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rutasPrivadas2
      SubnetId: !Ref privadaBD2

  grupoSegBastion:
    Type: AWS::EC2::SecurityGroup
    Condition: CrearBastion
    Properties:
      VpcId: !Ref miVPC
      GroupDescription: Grupo de seguridad para la instancia EC2 bastion. No permite trafico de entrada, se debe administrar mediante AWS SSM Session Manager

  rolBastion:
    Type: AWS::IAM::Role
    Condition: CrearRol
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service:
                - 'ec2.amazonaws.com'
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'
      Path: '/'
      Description: 'Rol para acceder al bastion mediante AWS SSM Session Manager'

  PerfilInstanciaBastion:
    Type: "AWS::IAM::InstanceProfile"
    Condition: CrearRol
    Properties:
      Roles:
        - !Ref rolBastion

  bastion:
    Type: AWS::EC2::Instance
    Condition: CrearBastion
    Properties:
      ImageId: !FindInMap [AMI, !Ref "AWS::Region", HVM64]
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      InstanceType: t4g.micro
      SecurityGroupIds:
        - !Ref grupoSegBastion
      SubnetId: !Ref publica1
      IamInstanceProfile: !If [CrearRol, !Ref PerfilInstanciaBastion, LabInstanceProfile]
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum update -y
            yum install mysql -y
      Tags:
        - Key: "Name"
          Value: "Workshop-Bastion"

Outputs:

  VPC:
    Description: ID de la VPC
    Value: !GetAtt miVPC.VpcId

  Publica1:
    Description: ID de la subred publica 1
    Value: !GetAtt publica1.SubnetId

  Publica2:
    Description: ID de la subred publica 2
    Value: !GetAtt publica2.SubnetId

  App1:
    Description: ID de la subred privada App1
    Value: !GetAtt privadaApp1.SubnetId

  App2:
    Description: ID de la subred privada App2
    Value: !GetAtt privadaApp2.SubnetId

  BD1:
    Description: ID de la subred privada App1
    Value: !GetAtt privadaBD1.SubnetId

  BD2:
    Description: ID de la subred privada App2
    Value: !GetAtt privadaBD2.SubnetId

  Bastion:
    Description: ID de la instancia bastión
    Value: !Ref bastion
